# hexlet_pytest

./: .gitignore  README.md  pyproject.toml
tests/: test_stack.py
