[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Влад Гуштын <vladislav3372@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_pytest"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
